--- a/UserInterface/View/AlarmView.xaml
+++ b/UserInterface/View/AlarmView.xaml
@@ -108,7 +108,7 @@
                 <DataGridTemplateColumn>
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <Button Command="{Binding DataContext.AcknowledgeAlarmCommand, ElementName=AlarmItems}" CommandParameter="{Binding Path=ID}" Content="Acknowledge alarm" Style="{StaticResource MyButtonStyle}" FontFamily="Consolas" Background="#FF94E264" Foreground="#FF252525"></Button>
+                            <Button Command="{Binding DataContext.AcknowledgeAlarmCommand, ElementName=AlarmItems}" CommandParameter="{Binding Path=ID}" Content="Acknowledge alarm" Style="{StaticResource MyButtonStyle}" FontFamily="Consolas" Background="#fca503" Foreground="#FF252525"></Button>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
