--- a/UserInterface/View/AlarmView.xaml
+++ b/UserInterface/View/AlarmView.xaml
@@ -5,9 +5,11 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:viewModel="clr-namespace:UserInterface.ViewModel"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="700" d:DesignWidth="900">
 
     <UserControl.Resources>
+        <BooleanToVisibilityConverter x:Key="BoolToVis"/>
+
         <Style TargetType="DataGrid">
             <!-- On mouse hover -->
             <Setter Property="BorderBrush" Value="#FF999999" />
@@ -97,18 +99,24 @@
                   VerticalAlignment="Top"
                   AutoGenerateColumns="False"
                   CanUserResizeRows="False"
-                  Height="600"
-                  Width="700"
                   CanUserAddRows="False" Grid.Column="1" Background="#FF5E5E5E" Grid.Row="1" BorderBrush="#FF3C3C3C" FontFamily="Consolas" FontSize="14">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Alarm reported" Width="*"  Binding="{Binding AlarmReported}"/>
-                <DataGridTextColumn Header="Alarm reported by" Width="*"  Binding="{Binding AlarmReportedBy}"/>
-                <DataGridTextColumn Header="Message" Width="*" Binding="{Binding Message}"/>
-                <DataGridTextColumn Header="Point name" Width="*" Binding="{Binding PointName}"/>
+                <DataGridTextColumn Header="Alarm reported" Width="180"  Binding="{Binding AlarmReported}"/>
+                <DataGridTextColumn Header="Alarm reported by" Width="140"  Binding="{Binding AlarmReportedBy}"/>
+                <DataGridTemplateColumn Header="Message" Width="*">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding Message}" TextWrapping="Wrap" ToolTip="{Binding Message}"/>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+                <DataGridTextColumn Header="Point name" Width="120" Binding="{Binding PointName}"/>
+                <!--<DataGridTextColumn Header="Alarm acknowledged" Width="180" Binding="{Binding AlarmAcknowledged}"/>
+                <DataGridTextColumn Header="Username" Width="100"  Binding="{Binding Username}"/>-->
                 <DataGridTemplateColumn>
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <Button Command="{Binding DataContext.AcknowledgeAlarmCommand, ElementName=AlarmItems}" CommandParameter="{Binding Path=ID}" Content="Acknowledge alarm" Style="{StaticResource MyButtonStyle}" FontFamily="Consolas" Background="#fca503" Foreground="#FF252525"></Button>
+                            <Button Width="150" Command="{Binding DataContext.AcknowledgeAlarmCommand, ElementName=AlarmItems}" CommandParameter="{Binding Path=ID}" Content="Acknowledge alarm" Style="{StaticResource MyButtonStyle}" FontFamily="Consolas" Background="#fca503" Foreground="#FF252525"></Button>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
