--- a/UserInterface/View/EventTableView.xaml
+++ b/UserInterface/View/EventTableView.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:UserInterface.View"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="740" d:DesignWidth="860">
     <UserControl.Resources>
         <Style TargetType="DataGrid">
             <!-- On mouse hover -->
@@ -63,9 +63,46 @@
                 </Setter.Value>
             </Setter>
         </Style>
+        <Style x:Key="MyButtonStyle" TargetType="Button">
+            <Setter Property="OverridesDefaultStyle" Value="True"/>
+            <Setter Property="Margin" Value="5"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border Name="border" 
+                            BorderThickness="0"
+                            Padding="4,2" 
+                            BorderBrush="DarkGray" 
+                            CornerRadius="3" 
+                            Background="{TemplateBinding Background}">
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter TargetName="border" Property="BorderBrush" Value="#FFF7CE12" />
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
     </UserControl.Resources>
 
     <Grid>
+        <Label Content="Events from:" Height="30" Foreground="#FFF5D856" FontFamily="Consolas" FontSize="16" Margin="17,19,730,691"/>
+        <DatePicker SelectedDate="{Binding DateFrom, Mode=TwoWay}" Cursor="Pen" Height="30" Margin="135,19,615,691"/>
+        <Label Content="Events to:" Height="30" Foreground="#FFF5D856" FontFamily="Consolas" FontSize="16" Margin="280,19,484,691"/>
+        <DatePicker SelectedDate="{Binding DateTo, Mode=TwoWay}" Cursor="Pen" Height="30" Margin="381,19,369,691"/>
+        <Button Content="" Command="{Binding FilterCommand}" CommandParameter="Apply" Style="{StaticResource MyButtonStyle}" Cursor="Hand" Height="55"  VerticalAlignment="Top" Width="55" FontFamily="Consolas" FontSize="16" Foreground="Black" BorderBrush="#FFC5C5C5" Margin="0,4,278,0" HorizontalAlignment="Right" Canvas.Left="9" Canvas.Top="598">
+            <Button.Background>
+                <ImageBrush ImageSource="../Assets/search.png"/>
+            </Button.Background>
+        </Button>
+        <Button Content="" Command="{Binding FilterCommand}" CommandParameter="Disable" Style="{StaticResource MyButtonStyle}" Cursor="Hand" Height="45"  VerticalAlignment="Top" Width="45" FontFamily="Consolas" FontSize="16" Foreground="Black" BorderBrush="#FFC5C5C5" Margin="0,10,219,0" HorizontalAlignment="Right" Canvas.Left="73" Canvas.Top="606">
+            <Button.Background>
+                <ImageBrush ImageSource="../Assets/dismiss.png"/>
+            </Button.Background>
+        </Button>
         <DataGrid x:Name="EventItems"
                   ItemsSource="{Binding EventItems, UpdateSourceTrigger=PropertyChanged}"
                   IsReadOnly="True"
@@ -73,15 +110,19 @@
                   VerticalAlignment="Top"
                   AutoGenerateColumns="False"
                   CanUserResizeRows="False"
-                  Height="600"
-                  Width="700"
-                  CanUserAddRows="False" Grid.Column="1" Background="#FF5E5E5E" Grid.Row="1" BorderBrush="#FF3C3C3C" FontFamily="Consolas" FontSize="14">
+                  CanUserAddRows="False" Background="#FF5E5E5E" BorderBrush="#FF3C3C3C" FontFamily="Consolas" FontSize="14" Margin="0,69,0,0">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Event reported" Width="*"  Binding="{Binding EventReported}"/>
-                <DataGridTextColumn Header="Event reported by" Width="*"  Binding="{Binding EventReportedBy}"/>
-                <DataGridTextColumn Header="Message" Width="*" Binding="{Binding Message}"/>
-                <DataGridTextColumn Header="Point name" Width="*" Binding="{Binding PointName}"/>
-                <DataGridTextColumn Header="GID" Width="*" Binding="{Binding GiD}"/>
+                <DataGridTextColumn Header="Event reported" Width="180"  Binding="{Binding EventReported}"/>
+                <DataGridTextColumn Header="Event reported by" Width="140"  Binding="{Binding EventReportedBy}"/>
+                <DataGridTemplateColumn Header="Message" Width="*">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding Message}" TextWrapping="Wrap" ToolTip="{Binding Message}"/>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+                <DataGridTextColumn Header="Point name" Width="120" Binding="{Binding PointName}"/>
+                <DataGridTextColumn Header="GID" Width="100" Binding="{Binding GiD}"/>
             </DataGrid.Columns>
         </DataGrid>
     </Grid>
