--- a/UserInterface/View/AlarmView.xaml
+++ b/UserInterface/View/AlarmView.xaml
@@ -6,10 +6,11 @@
              xmlns:viewModel="clr-namespace:UserInterface.ViewModel"
              xmlns:converters="clr-namespace:UserInterface.Converters"
              mc:Ignorable="d" 
-             d:DesignHeight="700" d:DesignWidth="900">
+             d:DesignHeight="700" d:DesignWidth="1000">
 
     <UserControl.Resources>
         <converters:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" True="Collapsed" False="Visible" />
+        <BooleanToVisibilityConverter x:Key="BoolToVis" />
 
         <Style TargetType="DataGrid">
             <!-- On mouse hover -->
@@ -102,22 +103,22 @@
                   CanUserResizeRows="False"
                   CanUserAddRows="False" Grid.Column="1" Background="#FF5E5E5E" Grid.Row="1" BorderBrush="#FF3C3C3C" FontFamily="Consolas" FontSize="14">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Alarm reported" Width="180"  Binding="{Binding AlarmReported}"/>
-                <DataGridTextColumn Header="Alarm reported by" Width="140"  Binding="{Binding AlarmReportedBy}"/>
-                <DataGridTemplateColumn Header="Message" Width="*">
+                <DataGridTextColumn Header="Alarm reported" Width="165"  Binding="{Binding AlarmReported}"/>
+                <DataGridTextColumn Header="Alarm reported by" Width="135"  Binding="{Binding AlarmReportedBy}"/>
+                <DataGridTemplateColumn Header="Message" Width="120">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <TextBlock Text="{Binding Message}" TextWrapping="Wrap" ToolTip="{Binding Message}"/>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
-                <DataGridTextColumn Header="Point name" Width="120" Binding="{Binding PointName}"/>
-                <!--<DataGridTextColumn Header="Alarm acknowledged" Width="180" Binding="{Binding AlarmAcknowledged}"/>
-                <DataGridTextColumn Header="Username" Width="100"  Binding="{Binding Username}"/>-->
+                <DataGridTextColumn Header="Point name" Width="110" Binding="{Binding PointName}"/>
+                <DataGridTextColumn Header="Alarm acknowledged" Width="165" Binding="{Binding AlarmAcknowledged}"/>
+                <DataGridTextColumn Header="Username" Width="95"  Binding="{Binding Username}"/>
                 <DataGridTemplateColumn>
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <Button Width="150" Visibility="{Binding AlarmAck, Converter={StaticResource BooleanToVisibilityConverter}}" Command="{Binding DataContext.AcknowledgeAlarmCommand, ElementName=AlarmItems}" CommandParameter="{Binding Path=ID}" Content="Acknowledge alarm" Style="{StaticResource MyButtonStyle}" FontFamily="Consolas" Background="#fca503" Foreground="#FF252525"></Button>
+                            <Button Width="140" Height="30" Visibility="{Binding AlarmAck, Converter={StaticResource BooleanToVisibilityConverter}}" Command="{Binding DataContext.AcknowledgeAlarmCommand, ElementName=AlarmItems}" CommandParameter="{Binding Path=ID}" Content="Acknowledge alarm" Style="{StaticResource MyButtonStyle}" FontFamily="Consolas" Background="#fc035a" Foreground="#FF252525"></Button>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
