--- a/UserInterface/View/CommandPowerTransformerView.xaml
+++ b/UserInterface/View/CommandPowerTransformerView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="UserInterface.View.CommandBreakerView"
+﻿<UserControl x:Class="UserInterface.View.CommandPowerTransformerView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -191,7 +191,7 @@
 
     <Grid>
         <Border BorderBrush="Black" BorderThickness="2" HorizontalAlignment="Left" Height="55" Margin="10,39,0,0" VerticalAlignment="Top" Width="347">
-            <Label Content="Commanding Breaker" FontWeight="Bold" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Left" Height="37" VerticalAlignment="Top" Width="329" Margin="8.4,8.4,0,0" FontFamily="Consolas" FontSize="22" Foreground="AntiqueWhite"/>
+            <Label Content="Commanding Power Transformer" FontWeight="Bold" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Left" Height="37" VerticalAlignment="Top" Width="347" Margin="-1.6,8.4,-2.2,0" FontFamily="Consolas" FontSize="22" Foreground="AntiqueWhite"/>
         </Border>
         <Border BorderBrush="Black" BorderThickness="2" HorizontalAlignment="Left" Height="55" Margin="10,92,0,0" VerticalAlignment="Top" Width="175">
             <Label Content="Name:" HorizontalAlignment="Left" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" Height="35" VerticalAlignment="Top" Width="155" Margin="8.4,8.4,0,0" FontFamily="Consolas" FontSize="20" Foreground="AntiqueWhite"/>
@@ -200,26 +200,29 @@
             <Label Content="Description:" HorizontalAlignment="Left" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" Height="35" VerticalAlignment="Top" Width="155" Margin="8.4,8.4,0,0" FontFamily="Consolas" FontSize="20" Foreground="AntiqueWhite"/>
         </Border>
         <Border BorderBrush="Black" BorderThickness="2" HorizontalAlignment="Left" Height="55" Margin="10,198,0,0" VerticalAlignment="Top" Width="175">
-            <Label Content="New state:" HorizontalAlignment="Left" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" Height="35" VerticalAlignment="Top" Width="155" Margin="8.4,8.4,0,0" FontFamily="Consolas" FontSize="20" Foreground="AntiqueWhite"/>
+            <Label Content="Current:" HorizontalAlignment="Left" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" Height="35" VerticalAlignment="Top" Width="155" Margin="8.4,8.4,0,0" FontFamily="Consolas" FontSize="20" Foreground="AntiqueWhite"/>
         </Border>
-        <Border BorderBrush="Black" BorderThickness="2" HorizontalAlignment="Left" Height="55" Margin="182,92,0,0" VerticalAlignment="Top" Width="175">
-            <Label Content="{Binding BreakerCurrent.Name}" HorizontalAlignment="Left" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" Height="35" Width="155" Margin="8.4,8.4,0,7.8" FontFamily="Consolas" FontSize="20" Foreground="#FFB1E698"/>
-        </Border>
-        <Border BorderBrush="Black" BorderThickness="2" HorizontalAlignment="Left" Height="55" Margin="182,145,0,0" VerticalAlignment="Top" Width="175">
-            <Label Content="{Binding BreakerCurrent.Description}" HorizontalAlignment="Left" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" Height="35" Width="155" Margin="8.4,8.4,0,7.8" FontFamily="Consolas" FontSize="20" Foreground="#FFB1E698"/>
-        </Border>
-        <Border BorderBrush="Black" BorderThickness="2" HorizontalAlignment="Left" Height="55" Margin="182,198,0,0" VerticalAlignment="Top" Width="175">
-            <ToggleButton Height="35" Width="70" Margin="8.4,8.4,0,7.8" Visibility="Visible" Style="{StaticResource SwitchTypeToggleButton}" IsChecked="{Binding NewState, Mode=TwoWay}"/>
-        </Border>
-        <Border BorderBrush="Black" BorderThickness="2" HorizontalAlignment="Left" Height="55" Margin="10,252,0,0" VerticalAlignment="Top" Width="347">
-            <Button Style="{StaticResource MyButtonStyle}" Height="35" Width="100" Content="Command" Margin="123.4,8.4,119.8,7.8" Background="#FF94E264" Foreground="#FF252525" Command="{Binding Command}" FontFamily="Consolas" FontSize="16"/>
+        <Border BorderBrush="Black" BorderThickness="2" HorizontalAlignment="Left" Height="55" Margin="10,252,0,0" VerticalAlignment="Top" Width="175">
+            <Label Content="Voltage:" HorizontalAlignment="Left" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" Height="35" VerticalAlignment="Top" Width="155" Margin="8.4,8.4,0,0" FontFamily="Consolas" FontSize="20" Foreground="AntiqueWhite"/>
         </Border>
 
-        <!--<Label Content="{Binding BreakerCurrent.Name}" HorizontalContentAlignment="Center" Margin="10,52,10,0" VerticalAlignment="Top" FontFamily="Consolas" FontSize="20" Foreground="#FFB1E698"/>
-        <Label Content="{Binding BreakerCurrent.Description}" HorizontalContentAlignment="Center" Margin="11,104,9,0" VerticalAlignment="Top" FontFamily="Consolas" FontSize="18" Foreground="#FFB1E698"/>
-        <Label Content="New state" HorizontalContentAlignment="Center" Margin="4,165,16,0" VerticalAlignment="Top" FontFamily="Consolas" FontSize="16" Foreground="#FFE69898"/>
-        <ToggleButton Height="35" Width="70" Margin="147,215,152.6,119.6" Visibility="Visible" Style="{StaticResource SwitchTypeToggleButton}" IsChecked="{Binding NewState}"/>
-        <Button Style="{StaticResource MyButtonStyle}" Height="30" Width="80" Content="Command" Margin="137,298,152.6,41.6" Background="#FF94E264" Foreground="#FF252525" Command="{Binding Command}" FontFamily="Consolas" FontSize="16"/>
-    -->
+        <Border BorderBrush="Black" BorderThickness="2" HorizontalAlignment="Left" Height="55" Margin="182,92,0,0" VerticalAlignment="Top" Width="175">
+            <Label Content="{Binding TranformerCurrent.Name}" HorizontalAlignment="Left" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" Height="35" Width="155" Margin="8.4,8.4,0,7.8" FontFamily="Consolas" FontSize="20" Foreground="#FFB1E698"/>
+        </Border>
+        <Border BorderBrush="Black" BorderThickness="2" HorizontalAlignment="Left" Height="55" Margin="182,145,0,0" VerticalAlignment="Top" Width="175">
+            <Label Content="{Binding TranformerCurrent.Description}" HorizontalAlignment="Left" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" Height="35" Width="155" Margin="8.4,8.4,0,7.8" FontFamily="Consolas" FontSize="16" Foreground="#FFB1E698"/>
+        </Border>
+        <Border BorderBrush="Black" BorderThickness="2" HorizontalAlignment="Left" Height="55" Margin="182,198,0,0" VerticalAlignment="Top" Width="88">
+            <Button FontFamily="Segoe UI Symbol" Content="&#xE110;" Command="{Binding CurrentVoltageCommand}" CommandParameter="CurrentUp" Background="Yellow" FontSize="25" Margin="8.4,8.4,7.8,7.8"/>
+        </Border>
+        <Border BorderBrush="Black" BorderThickness="2" HorizontalAlignment="Left" Height="55" Margin="269,198,0,0" VerticalAlignment="Top" Width="88.5">
+            <Button FontFamily="Segoe UI Symbol" Content="&#xE1FD;" Command="{Binding CurrentVoltageCommand}" CommandParameter="CurrentDown" Background="#FFDDA417" FontSize="25" Margin="8.4,8.4,7.8,7.8"/>
+        </Border>
+        <Border BorderBrush="Black" BorderThickness="2" HorizontalAlignment="Left" Height="55" Margin="182,252,0,0" VerticalAlignment="Top" Width="88">
+            <Button FontFamily="Segoe UI Symbol" Content="&#xE110;" Command="{Binding CurrentVoltageCommand}" CommandParameter="VoltageUp" Background="SkyBlue" FontSize="25" Margin="8.4,8.4,7.8,7.8"/>
+        </Border>
+        <Border BorderBrush="Black" BorderThickness="2" HorizontalAlignment="Left" Height="55" Margin="269,252,0,0" VerticalAlignment="Top" Width="88.5">
+            <Button FontFamily="Segoe UI Symbol" Content="&#xE1FD;" Command="{Binding CurrentVoltageCommand}" CommandParameter="VoltageDown" Background="#FF3E26D6" FontSize="25" Margin="8.4,8.4,7.8,7.8"/>
+        </Border>
     </Grid>
 </UserControl>
