--- a/UserInterface/View/EventTableView.xaml
+++ b/UserInterface/View/EventTableView.xaml
@@ -16,6 +16,7 @@
             <Setter Property="RowStyle">
                 <Setter.Value>
                     <Style TargetType="DataGridRow">
+                        <Setter Property="Background" Value="#A9A9A9" />
                         <Style.Triggers>
                             <!-- Highlight a grid row as the mouse passes over -->
                             <Trigger Property="IsMouseOver" Value="True">
@@ -28,14 +29,6 @@
             <Setter Property="CellStyle">
                 <Setter.Value>
                     <Style TargetType="DataGridCell">
-                        <Style.Triggers>
-                            <!-- On row select -->
-                            <Trigger Property="IsSelected" Value="True">
-                                <Setter Property="Background" Value="#FF6DEA3E" />
-                                <Setter Property="BorderBrush" Value="Transparent" />
-                                <Setter Property="Foreground" Value="Black" />
-                            </Trigger>
-                        </Style.Triggers>
                         <!-- Add some padding around the contents of a cell -->
                         <Setter Property="Padding" Value="4,3,4,3" />
                         <Setter Property="BorderBrush" Value="Transparent"/>
@@ -90,15 +83,15 @@
 
     <Grid>
         <Label Content="Events from:" Height="30" Foreground="#FFF5D856" FontFamily="Consolas" FontSize="16" Margin="17,19,730,691"/>
-        <DatePicker SelectedDate="{Binding DateFrom, Mode=TwoWay}" Cursor="Pen" Height="30" Margin="135,19,615,691"/>
-        <Label Content="Events to:" Height="30" Foreground="#FFF5D856" FontFamily="Consolas" FontSize="16" Margin="280,19,484,691"/>
-        <DatePicker SelectedDate="{Binding DateTo, Mode=TwoWay}" Cursor="Pen" Height="30" Margin="381,19,369,691"/>
-        <Button Content="" Command="{Binding FilterCommand}" CommandParameter="Apply" Style="{StaticResource MyButtonStyle}" Cursor="Hand" Height="55"  VerticalAlignment="Top" Width="55" FontFamily="Consolas" FontSize="16" Foreground="Black" BorderBrush="#FFC5C5C5" Margin="0,4,278,0" HorizontalAlignment="Right" Canvas.Left="9" Canvas.Top="598">
+        <DatePicker SelectedDate="{Binding DateFrom, Mode=TwoWay}" Cursor="Pen" Height="30" Width="150" Margin="135,19,615,691"/>
+        <Label Content="Events to:" Height="30" Foreground="#FFF5D856" FontFamily="Consolas" FontSize="16" Margin="337,19,427,691"/>
+        <DatePicker SelectedDate="{Binding DateTo, Mode=TwoWay}" Cursor="Pen" Height="30" Width="150" Margin="438,19,312,691"/>
+        <Button Content="" Command="{Binding FilterCommand}" CommandParameter="Apply" Style="{StaticResource MyButtonStyle}" Cursor="Hand" Height="55"  VerticalAlignment="Top" Width="55" FontFamily="Consolas" FontSize="16" Foreground="Black" BorderBrush="#FFC5C5C5" Margin="0,4,221,0" HorizontalAlignment="Right" Canvas.Left="9" Canvas.Top="598">
             <Button.Background>
                 <ImageBrush ImageSource="../Assets/search.png"/>
             </Button.Background>
         </Button>
-        <Button Content="" Command="{Binding FilterCommand}" CommandParameter="Disable" Style="{StaticResource MyButtonStyle}" Cursor="Hand" Height="45"  VerticalAlignment="Top" Width="45" FontFamily="Consolas" FontSize="16" Foreground="Black" BorderBrush="#FFC5C5C5" Margin="0,10,219,0" HorizontalAlignment="Right" Canvas.Left="73" Canvas.Top="606">
+        <Button Content="" Command="{Binding FilterCommand}" CommandParameter="Disable" Style="{StaticResource MyButtonStyle}" Cursor="Hand" Height="45"  VerticalAlignment="Top" Width="45" FontFamily="Consolas" FontSize="16" Foreground="Black" BorderBrush="#FFC5C5C5" Margin="0,10,162,0" HorizontalAlignment="Right" Canvas.Left="73" Canvas.Top="606">
             <Button.Background>
                 <ImageBrush ImageSource="../Assets/dismiss.png"/>
             </Button.Background>
@@ -110,7 +103,7 @@
                   VerticalAlignment="Top"
                   AutoGenerateColumns="False"
                   CanUserResizeRows="False"
-                  CanUserAddRows="False" Background="#FF5E5E5E" BorderBrush="#FF3C3C3C" FontFamily="Consolas" FontSize="14" Margin="0,69,0,0">
+                  CanUserAddRows="False" Background="#A9A9A9" BorderBrush="#FF3C3C3C" FontFamily="Consolas" FontSize="14" Margin="0,69,0,0">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Event reported" Width="180"  Binding="{Binding EventReported}"/>
                 <DataGridTextColumn Header="Event reported by" Width="140"  Binding="{Binding EventReportedBy}"/>
