--- a/UserInterface/View/AlarmView.xaml
+++ b/UserInterface/View/AlarmView.xaml
@@ -21,6 +21,7 @@
             <Setter Property="RowStyle">
                 <Setter.Value>
                     <Style TargetType="DataGridRow">
+                        <Setter Property="Background" Value="#A9A9A9" />
                         <Style.Triggers>
                             <!-- Highlight a grid row as the mouse passes over -->
                             <Trigger Property="IsMouseOver" Value="True">
@@ -33,14 +34,6 @@
             <Setter Property="CellStyle">
                 <Setter.Value>
                     <Style TargetType="DataGridCell">
-                        <Style.Triggers>
-                            <!-- On row select -->
-                            <Trigger Property="IsSelected" Value="True">
-                                <Setter Property="Background" Value="#FF6DEA3E" />
-                                <Setter Property="BorderBrush" Value="Transparent" />
-                                <Setter Property="Foreground" Value="Black" />
-                            </Trigger>
-                        </Style.Triggers>
                         <!-- Add some padding around the contents of a cell -->
                         <Setter Property="Padding" Value="4,3,4,3" />
                         <Setter Property="BorderBrush" Value="Transparent"/>
@@ -95,13 +88,13 @@
 
     <Grid>
         <DataGrid x:Name="AlarmItems"
-                  ItemsSource="{Binding AlarmItems, UpdateSourceTrigger=PropertyChanged}"
-                  IsReadOnly="True"
-                  VerticalScrollBarVisibility="Auto"
-                  VerticalAlignment="Top"
-                  AutoGenerateColumns="False"
-                  CanUserResizeRows="False"
-                  CanUserAddRows="False" Grid.Column="1" Background="#FF5E5E5E" Grid.Row="1" BorderBrush="#FF3C3C3C" FontFamily="Consolas" FontSize="14">
+                      ItemsSource="{Binding AlarmItems, UpdateSourceTrigger=PropertyChanged}"
+                      IsReadOnly="True"
+                      VerticalScrollBarVisibility="Auto"
+                      VerticalAlignment="Top"
+                      AutoGenerateColumns="False"
+                      CanUserResizeRows="False"
+                      CanUserAddRows="False" Grid.Column="1" Background="#A9A9A9" Grid.Row="1" BorderBrush="#FF3C3C3C" FontFamily="Consolas" FontSize="14">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Alarm reported" Width="165"  Binding="{Binding AlarmReported}"/>
                 <DataGridTextColumn Header="Alarm reported by" Width="135"  Binding="{Binding AlarmReportedBy}"/>
