--- a/UserInterface/View/CommandPowerTransformerView.xaml
+++ b/UserInterface/View/CommandPowerTransformerView.xaml
@@ -190,39 +190,30 @@
     </UserControl.Resources>
 
     <Grid>
-        <Border BorderBrush="Black" BorderThickness="2" HorizontalAlignment="Left" Height="55" Margin="10,39,0,0" VerticalAlignment="Top" Width="347">
+        <Border BorderBrush="Black" BorderThickness="2" HorizontalAlignment="Left" Height="55" Margin="10,69,0,0" VerticalAlignment="Top" Width="347">
             <Label Content="Commanding Power Transformer" FontWeight="Bold" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Left" Height="37" VerticalAlignment="Top" Width="347" Margin="-1.6,8.4,-2.2,0" FontFamily="Consolas" FontSize="22" Foreground="AntiqueWhite"/>
         </Border>
-        <Border BorderBrush="Black" BorderThickness="2" HorizontalAlignment="Left" Height="55" Margin="10,92,0,0" VerticalAlignment="Top" Width="175">
+        <Border BorderBrush="Black" BorderThickness="2" HorizontalAlignment="Left" Height="55" Margin="10,122,0,0" VerticalAlignment="Top" Width="175">
             <Label Content="Name:" HorizontalAlignment="Left" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" Height="35" VerticalAlignment="Top" Width="155" Margin="8.4,8.4,0,0" FontFamily="Consolas" FontSize="20" Foreground="AntiqueWhite"/>
         </Border>
-        <Border BorderBrush="Black" BorderThickness="2" HorizontalAlignment="Left" Height="55" Margin="10,145,0,0" VerticalAlignment="Top" Width="175">
+        <Border BorderBrush="Black" BorderThickness="2" HorizontalAlignment="Left" Height="55" Margin="10,175,0,0" VerticalAlignment="Top" Width="175">
             <Label Content="Description:" HorizontalAlignment="Left" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" Height="35" VerticalAlignment="Top" Width="155" Margin="8.4,8.4,0,0" FontFamily="Consolas" FontSize="20" Foreground="AntiqueWhite"/>
         </Border>
-        <Border BorderBrush="Black" BorderThickness="2" HorizontalAlignment="Left" Height="55" Margin="10,198,0,0" VerticalAlignment="Top" Width="175">
-            <Label Content="Current:" HorizontalAlignment="Left" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" Height="35" VerticalAlignment="Top" Width="155" Margin="8.4,8.4,0,0" FontFamily="Consolas" FontSize="20" Foreground="AntiqueWhite"/>
-        </Border>
-        <Border BorderBrush="Black" BorderThickness="2" HorizontalAlignment="Left" Height="55" Margin="10,252,0,0" VerticalAlignment="Top" Width="175">
-            <Label Content="Voltage:" HorizontalAlignment="Left" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" Height="35" VerticalAlignment="Top" Width="155" Margin="8.4,8.4,0,0" FontFamily="Consolas" FontSize="20" Foreground="AntiqueWhite"/>
+        <Border BorderBrush="Black" BorderThickness="2" HorizontalAlignment="Left" Height="55" Margin="10,228,0,0" VerticalAlignment="Top" Width="175">
+            <Label Content="TapChanger:" HorizontalAlignment="Left" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" Height="35" VerticalAlignment="Top" Width="155" Margin="8.4,8.4,0,0" FontFamily="Consolas" FontSize="20" Foreground="AntiqueWhite"/>
         </Border>
 
-        <Border BorderBrush="Black" BorderThickness="2" HorizontalAlignment="Left" Height="55" Margin="182,92,0,0" VerticalAlignment="Top" Width="175">
+        <Border BorderBrush="Black" BorderThickness="2" HorizontalAlignment="Left" Height="55" Margin="182,122,0,0" VerticalAlignment="Top" Width="175">
             <Label Content="{Binding TranformerCurrent.Name}" HorizontalAlignment="Left" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" Height="35" Width="155" Margin="8.4,8.4,0,7.8" FontFamily="Consolas" FontSize="20" Foreground="#FFB1E698"/>
         </Border>
-        <Border BorderBrush="Black" BorderThickness="2" HorizontalAlignment="Left" Height="55" Margin="182,145,0,0" VerticalAlignment="Top" Width="175">
+        <Border BorderBrush="Black" BorderThickness="2" HorizontalAlignment="Left" Height="55" Margin="182,175,0,0" VerticalAlignment="Top" Width="175">
             <Label Content="{Binding TranformerCurrent.Description}" HorizontalAlignment="Left" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" Height="35" Width="155" Margin="8.4,8.4,0,7.8" FontFamily="Consolas" FontSize="16" Foreground="#FFB1E698"/>
         </Border>
-        <Border BorderBrush="Black" BorderThickness="2" HorizontalAlignment="Left" Height="55" Margin="182,198,0,0" VerticalAlignment="Top" Width="88">
-            <Button FontFamily="Segoe UI Symbol" Content="&#xE110;" Command="{Binding CurrentVoltageCommand}" CommandParameter="CurrentUp" Background="Yellow" FontSize="25" Margin="8.4,8.4,7.8,7.8"/>
+        <Border BorderBrush="Black" BorderThickness="2" HorizontalAlignment="Left" Height="55" Margin="182,228,0,0" VerticalAlignment="Top" Width="88">
+            <Button FontFamily="Segoe UI Symbol" Content="&#xE110;" Command="{Binding CurrentVoltageCommand}" CommandParameter="TapChangerUp" Background="Yellow" FontSize="25" Margin="8.4,8.4,7.8,7.8"/>
         </Border>
-        <Border BorderBrush="Black" BorderThickness="2" HorizontalAlignment="Left" Height="55" Margin="269,198,0,0" VerticalAlignment="Top" Width="88.5">
-            <Button FontFamily="Segoe UI Symbol" Content="&#xE1FD;" Command="{Binding CurrentVoltageCommand}" CommandParameter="CurrentDown" Background="#FFDDA417" FontSize="25" Margin="8.4,8.4,7.8,7.8"/>
-        </Border>
-        <Border BorderBrush="Black" BorderThickness="2" HorizontalAlignment="Left" Height="55" Margin="182,252,0,0" VerticalAlignment="Top" Width="88">
-            <Button FontFamily="Segoe UI Symbol" Content="&#xE110;" Command="{Binding CurrentVoltageCommand}" CommandParameter="VoltageUp" Background="SkyBlue" FontSize="25" Margin="8.4,8.4,7.8,7.8"/>
-        </Border>
-        <Border BorderBrush="Black" BorderThickness="2" HorizontalAlignment="Left" Height="55" Margin="269,252,0,0" VerticalAlignment="Top" Width="88.5">
-            <Button FontFamily="Segoe UI Symbol" Content="&#xE1FD;" Command="{Binding CurrentVoltageCommand}" CommandParameter="VoltageDown" Background="#FF3E26D6" FontSize="25" Margin="8.4,8.4,7.8,7.8"/>
+        <Border BorderBrush="Black" BorderThickness="2" HorizontalAlignment="Left" Height="55" Margin="269,228,0,0" VerticalAlignment="Top" Width="89">
+            <Button FontFamily="Segoe UI Symbol" Content="&#xE1FD;" Command="{Binding CurrentVoltageCommand}" CommandParameter="TapChangerDown" Background="#FFDDA417" FontSize="25" Margin="8.4,8.4,7.8,7.8"/>
         </Border>
     </Grid>
 </UserControl>
