--- a/UserInterface/View/AnalyticsViews/SignalListItem.xaml
+++ b/UserInterface/View/AnalyticsViews/SignalListItem.xaml
@@ -12,6 +12,6 @@
             <ColumnDefinition Width="0.2*"/>
         </Grid.ColumnDefinitions>
         <Label Grid.Column="0" HorizontalAlignment="Stretch" Content="{Binding Name}" />
-        <CheckBox Grid.Column="1" HorizontalAlignment="Stretch" IsChecked="{Binding IsChecked, Mode=TwoWay}"/>
+        <CheckBox Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center" IsChecked="{Binding IsChecked, Mode=TwoWay}"/>
     </Grid>
 </UserControl>
